--- a/index.html
+++ b/index.html
@@ -252,7 +252,25 @@ function search() {
                             <i class="linecons-star"></i>
                             <span class="title">常用推荐</span>
                         </a>
-                    </li>
+                        <ul>
+                            <li>
+                                <a href="#发现产品" class="smooth">
+                                    <span class="title">发现产品</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#界面灵感" class="smooth">
+                                    <span class="title">界面灵感</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#网页灵感" class="smooth">
+                                    <span class="title">网页灵感</span>
+                                    <span class="label label-pink pull-right hidden-collapsed">Hot</span>
+                                </a>
+                            </li>
+                        </ul>
+                        </li>
                     <li>
                         <a href="#界面灵感" class="smooth">
                             <i class="linecons-star"></i>
