--- a/index.html
+++ b/index.html
@@ -260,6 +260,40 @@ function search() {
                         </a>
                     </li>
                     <li>
+                        <a>
+                            <i class="linecons-lightbulb"></i>
+                            <span class="title">灵感采集</span>
+                        </a>
+                        <ul>
+                            <li>
+                                <a href="#发现产品" class="smooth">
+                                    <span class="title">发现产品</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#界面灵感" class="smooth">
+                                    <span class="title">界面灵感</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#网页灵感" class="smooth">
+                                    <span class="title">网页灵感</span>
+                                    <span class="label label-pink pull-right hidden-collapsed">Hot</span>
+                                </a>
+                            </li>
+                            <!-- <li>
+                                <a href="#动效设计" class="smooth">
+                                    <span class="title">动效设计</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#电商平台" class="smooth">
+                                    <span class="title">电商平台</span>
+                                </a>
+                            </li> -->
+                        </ul>
+                    </li>
+                    <li>
                         <a href="#社区资讯" class="smooth">
                             <i class="linecons-star"></i>
                             <span class="title">社区资讯</span>
