--- a/index.html
+++ b/index.html
@@ -248,49 +248,32 @@ function search() {
                 </header>
                 <ul id="main-menu" class="main-menu">
                     <li>
-                        <a href="#在线设计" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">在线设计</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#界面灵感" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">界面灵感</span>
-                        </a>
-                    </li>
-                    <li>
                         <a>
                             <i class="linecons-lightbulb"></i>
-                            <span class="title">灵感采集</span>
+                            <span class="title">平面设计</span>
                         </a>
                         <ul>
                             <li>
-                                <a href="#发现产品" class="smooth">
-                                    <span class="title">发现产品</span>
+                                <a href="#设计·创意" class="smooth">
+                                    <span class="title">设计·创意</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#界面灵感" class="smooth">
-                                    <span class="title">界面灵感</span>
+                                <a href="#设计·素材" class="smooth">
+                                    <span class="title">设计·素材</span>
+                                </a>
+                            </li>
+                             <li>
+                                <a href="#设计·创意" class="smooth">
+                                    <span class="title">设计·创意</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#网页灵感" class="smooth">
-                                    <span class="title">网页灵感</span>
+                                <a href="#设计·字体" class="smooth">
+                                    <span class="title">设计·字体</span>
                                     <span class="label label-pink pull-right hidden-collapsed">Hot</span>
                                 </a>
                             </li>
-                            <!-- <li>
-                                <a href="#动效设计" class="smooth">
-                                    <span class="title">动效设计</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#电商平台" class="smooth">
-                                    <span class="title">电商平台</span>
-                                </a>
-                            </li> -->
                         </ul>
                     </li>
                     <li>
