--- a/index.html
+++ b/index.html
@@ -254,24 +254,33 @@ function search() {
                         </a>
                         <ul>
                             <li>
-                                <a href="#设计·创意" class="smooth">
-                                    <span class="title">设计·创意</span>
+                                <a href="#创意" class="smooth">
+                                    <span class="title">创意</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#设计·素材" class="smooth">
-                                    <span class="title">设计·素材</span>
+                                <a href="#素材" class="smooth">
+                                    <span class="title">素材</span>
                                 </a>
                             </li>
                              <li>
-                                <a href="#设计·创意" class="smooth">
-                                    <span class="title">设计·创意</span>
+                                <a href="#字体" class="smooth">
+                                    <span class="title">字体</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#设计·字体" class="smooth">
-                                    <span class="title">设计·字体</span>
-                                    <span class="label label-pink pull-right hidden-collapsed">Hot</span>
+                                <a href="#颜色" class="smooth">
+                                    <span class="title">颜色</span>
+                                </a>
+                            </li>
+                             <li>
+                                <a href="#视频" class="smooth">
+                                    <span class="title">视频</span>
+                                </a>
+                            </li>
+                             <li>
+                                <a href="#在线" class="smooth">
+                                    <span class="title">在线</span>
                                 </a>
                             </li>
                         </ul>
@@ -280,138 +289,6 @@ function search() {
                         <a href="#社区资讯" class="smooth">
                             <i class="linecons-star"></i>
                             <span class="title">社区资讯</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#发现产品" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">发现产品</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#网页灵感" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">网页灵感</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#图标素材" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">图标素材</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#LOGO设计" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">LOGO设计</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#平面素材" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">平面素材</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#UI资源" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">UI资源</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#Sketch资源" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">Sketch资源</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#字体资源" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">字体资源</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#Mockup" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">Mockup</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#摄影图库" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">摄影图库</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#PPT资源" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">PPT资源</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#图形创意" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">图形创意</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#界面设计" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">界面设计</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#交互动效" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">交互动效</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#在线配色" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">在线配色</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#在线工具" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">在线工具</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#设计规范" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">设计规范</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#视频教程" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">视频教程</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#设计文章" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">设计文章</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#设计电台" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">设计电台</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#交互设计" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">交互设计</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#UED团队" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">UED团队</span>
                         </a>
                     </li>
                 </ul>
@@ -459,7 +336,7 @@ function search() {
               </div>
             </section>
             <script>search()</script>
-            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="在线设计"></i>在线设计</h4>
+            <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="平面设计"></i>平面设计·创意</h4>
             <div class="row">
                 <div class="col-sm-3">
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://dribbble.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://dribbble.com/">
