--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ function search() {
                 <ul id="main-menu" class="main-menu">
                     <li>
                         <a href="#平面设计" class="smooth">
-                            <i class="icon ion-android-color-palette"></i>
+                            <i class="linecons-android-color-palette"></i>
                             <span class="title">平面设计</span>
                         </a>
                     </li>
