--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ function search() {
                     </li>
                     <li>
                         <a href="#网页灵感" class="smooth">
-                            <i class="linecons-star"></i>
+                            <i class="linecons-diamond"></i>
                             <span class="title">网页灵感</span>
                         </a>
                     </li>
