--- a/index.html
+++ b/index.html
@@ -249,49 +249,49 @@ function search() {
                 <ul id="main-menu" class="main-menu">
                     <li>
                         <a href="#网上冲浪" class="smooth">
-                            <i class="linecons-star"></i>
+                            <i class="linecons-cloud"></i>
                             <span class="title">网上冲浪</span>
                         </a>
                     </li>
                     <li>
                         <a href="#电脑软件" class="smooth">
-                            <i class="linecons-star"></i>
+                            <i class="linecons-display"></i>
                             <span class="title">电脑软件</span>
                         </a>
                     </li>
                     <li>
                         <a href="#资源搜索" class="smooth">
-                            <i class="linecons-star"></i>
+                            <i class="linecons-search"></i>
                             <span class="title">资源搜索</span>
                         </a>
                     </li>
                     <li>
                         <a href="#图片检索" class="smooth">
-                            <i class="linecons-star"></i>
+                            <i class="linecons-photo"></i>
                             <span class="title">图片检索</span>
                         </a>
                     </li>
                     <li>
                         <a href="#软件搜索" class="smooth">
-                            <i class="linecons-star"></i>
+                            <i class="linecons-like"></i>
                             <span class="title">软件搜索</span>
                         </a>
                     </li>
                     <li>
                         <a href="#在线办公" class="smooth">
-                            <i class="linecons-star"></i>
+                            <i class="linecons-buld"></i>
                             <span class="title">在线办公</span>
                         </a>
                     </li>
                     <li>
                         <a href="#平面设计" class="smooth">
-                            <i class="linecons-star"></i>
+                            <i class="linecons-pen"></i>
                             <span class="title">平面设计</span>
                         </a>
                     </li>
                     <li>
                         <a href="#其他网站" class="smooth">
-                            <i class="linecons-star"></i>
+                            <i class="linecons-clip"></i>
                             <span class="title">其他网站</span>
                         </a>
                     </li>
