--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ function search() {
                     </li>
                     <li>
                         <a href="#电脑软件" class="smooth">
-                            <i class="linecons-display"></i>
+                            <i class="linecons-star"></i>
                             <span class="title">电脑软件</span>
                         </a>
                     </li>
@@ -273,25 +273,25 @@ function search() {
                     </li>
                     <li>
                         <a href="#软件搜索" class="smooth">
-                            <i class="linecons-like"></i>
+                            <i class="linecons-bookmark"></i>
                             <span class="title">软件搜索</span>
                         </a>
                     </li>
                     <li>
                         <a href="#在线办公" class="smooth">
-                            <i class="linecons-buld"></i>
+                            <i class="linecons-address"></i>
                             <span class="title">在线办公</span>
                         </a>
                     </li>
                     <li>
                         <a href="#平面设计" class="smooth">
-                            <i class="linecons-pen"></i>
+                            <i class="linecons-brush"></i>
                             <span class="title">平面设计</span>
                         </a>
                     </li>
                     <li>
                         <a href="#其他网站" class="smooth">
-                            <i class="linecons-clip"></i>
+                            <i class="linecons-settings"></i>
                             <span class="title">其他网站</span>
                         </a>
                     </li>
